--- a/partials/companies.html
+++ b/partials/companies.html
@@ -17,7 +17,7 @@
             </div>
             <div class="col-md-4 col-sm-12">
                 <div>
-                    <img src="css/images/address.png" class="img-responsive">
+                    <img src="css/images/amigos.png" class="img-responsive">
                 </div>
             </div>
         </div>
