--- a/partials/employment.html
+++ b/partials/employment.html
@@ -6,20 +6,45 @@
             <div class="clearfix"></div>
             <div class="col-md-6">
                 <div class="text-box white padding-3 bmargin">
-                    <div class="icon-plain-msmall right text-orange-4"><i class="fa fa-address-card text-yellow-4"></i></div>
+                    <div class="icon-plain-msmall right text-orange-4"><i class="fa fa-clock-o text-yellow-4"></i></div>
                     <div class="text-box-left less-padding-1">
                         <h5 class="uppercase less-mar2">Managing Director</h5>
-                        <p><span class="text-orange-4">Present</span> - Luxuria, Abu Dhabi</p>
+                        <p><span class="text-orange-4">Present</span> - Luxuria</p>
+                        <p><span>Abu Dhabi</span></p>
+                        <!--<p class="paddtop1">Luxuria offers classic watches for men, elegant gold and silver watches for women, where each watch is a paragon of quality and precision engineering.</p>-->
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="text-box white padding-3 bmargin">
+                    <div class="icon-plain-msmall right text-orange-4"><i class="fa fa-building text-yellow-4"></i></div>
+                    <div class="text-box-left less-padding-1">
+                        <h5 class="uppercase less-mar2">Managing Director</h5>
+                        <p><span class="text-orange-4">2014 - Present</span> - D' SIGN INTERIOR</p>
+                        <p><span>Fujairah</span></p>
+                        <!--<p class="paddtop1">Lorem ipsum dolor sit amet consectetuer adipiscing elit Sus Aliquam ornare hendrerit augue. </p>-->
+                    </div>
+                </div>
+            </div>
+            <div class="col-divider-margin-3"></div>
+            <div class="col-md-6">
+                <div class="text-box white padding-3 bmargin">
+                    <div class="icon-plain-msmall right text-orange-4"><i class="fa fa-clock-o text-yellow-4"></i></div>
+                    <div class="text-box-left less-padding-1">
+                        <h5 class="uppercase less-mar2">Business Development Manager</h5>
+                        <p><span class="text-orange-4">2011 - Present</span> - Time House Company</p>
+                        <p><span>UAE</span></p>
                         <!--<p class="paddtop1">Lorem ipsum dolor sit amet consectetuer adipiscing elit Sus Aliquam ornare hendrerit augue. </p>-->
                     </div>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="text-box white padding-3 bmargin">
-                    <div class="icon-plain-msmall right text-orange-4"><i class="fa fa-address-card text-yellow-4"></i></div>
+                    <div class="icon-plain-msmall right text-orange-4"><i class="fa fa-clock-o text-yellow-4"></i></div>
                     <div class="text-box-left less-padding-1">
-                        <h5 class="uppercase less-mar2">Managing Director</h5>
-                        <p><span class="text-orange-4">2014 - Present</span> - D' SIGN INTERIOR, Fujairah</p>
+                        <h5 class="uppercase less-mar2">Team Leader</h5>
+                        <p><span class="text-orange-4">2005 - 2010</span> - Bridgeway Group</p>
+                        <p><span>Dubai</span></p>
                         <!--<p class="paddtop1">Lorem ipsum dolor sit amet consectetuer adipiscing elit Sus Aliquam ornare hendrerit augue. </p>-->
                     </div>
                 </div>
@@ -29,8 +54,9 @@
                 <div class="text-box white padding-3 bmargin">
                     <div class="icon-plain-msmall right text-orange-4"><i class="fa fa-address-card text-yellow-4"></i></div>
                     <div class="text-box-left less-padding-1">
-                        <h5 class="uppercase less-mar2">Business Development Manager</h5>
-                        <p><span class="text-orange-4">2011 - Present</span> - Time House Company</p>
+                        <h5 class="uppercase less-mar2">Sales Trainer</h5>
+                        <p><span class="text-orange-4">2001 - 2003</span> - Insurance Regulatory and Development Authority</p>
+                        <p><span>Malappuram</span></p>
                         <!--<p class="paddtop1">Lorem ipsum dolor sit amet consectetuer adipiscing elit Sus Aliquam ornare hendrerit augue. </p>-->
                     </div>
                 </div>
@@ -39,12 +65,16 @@
                 <div class="text-box white padding-3 bmargin">
                     <div class="icon-plain-msmall right text-orange-4"><i class="fa fa-address-card text-yellow-4"></i></div>
                     <div class="text-box-left less-padding-1">
-                        <h5 class="uppercase less-mar2">Team Leader</h5>
-                        <p><span class="text-orange-4">2005 - 2010</span> - Bridgeway Group, Dubai</p>
+                        <h5 class="uppercase less-mar2">Trainer</h5>
+                        <p><span class="text-orange-4">2000 - 2003</span> - Pain and palliative care malappuram</p>
+                        <p><span>Nilambur</span></p>
                         <!--<p class="paddtop1">Lorem ipsum dolor sit amet consectetuer adipiscing elit Sus Aliquam ornare hendrerit augue. </p>-->
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="row">
+            
         </div>
     </div>
 </section>
