--- a/partials/companies.html
+++ b/partials/companies.html
@@ -23,8 +23,10 @@
                             </ul>
                         </li>
                     </ul>
+                    <div class="text-right">
+                        <button type="button" class="btn btn-link text-orange-4">Read more</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 </section>
