--- a/partials/home.html
+++ b/partials/home.html
@@ -25,7 +25,7 @@
                 </ul>
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12 bmargin" style="max-height: 350px; overflow: hidden">
-                <img src="css/images/profile-pic.png" alt="" class="img-responsive">
+                <img src="css/images/profile-pic.jpg" alt="" class="img-responsive">
             </div>
         </div>
     </div>
@@ -52,6 +52,9 @@
                             </ul>
                         </li>
                     </ul>
+                    <div class="text-right">
+                        <button type="button" class="btn btn-link text-orange-4">Read more</button>
+                    </div>
                 </div>
             </div>
         </div>
