--- a/partials/profile.html
+++ b/partials/profile.html
@@ -1,7 +1,7 @@
 <section id="profile" class="relative par-padding clearfix">
     <div class="img-holder col-md-6 col-sm-3 pull-left">
         <div class="background-imgholder" style="background:url(css/images/main-profile-pic.png)">
-        <img class="nodisplay-image" src="images/766.jpg" alt=""> </div>
+        <img class="nodisplay-image" src="css/images/main-profile-pic.png" alt=""> </div>
     </div>
     <div class="container-fluid">
         <div class="row">
@@ -13,11 +13,11 @@
                         <div class="title-line-4"></div>
                     </div>
                     <div class="clearfix"></div>
-                    <div>The man who hails from a small town called Wandoor of Malappuram District, Kerala is now a promising businessman in UAE. He comes from a middle class family, his father is a farmer as well as small scale businessman. Mr.Faisal's interest in marketing started from a tender age helping his father in their retail shop and learning the art of marketing by doing part time jobs along with his studies. He holds a degree in Bachelor of Commerce from MES College Mampand and studies International Business Management from Christ University, Bangalore</div>
-                    <div>He is an entrepreneur who is the founder and Managing Director of <strong>LUXURIA</strong> and <strong>D'SIGN INTERIOR</strong> as well as the Managing Partner of <strong>Amigos Exhibitions LLC</strong>. Prior to founding his own companies he worked as an accountant in a Bangalore based company and later joined Bridgeway Group of Companies, Dubai as a counter sales manager. He founded Time House retails concept for Bridgeway Group. He was the Business Developing Manager as well as interior designer for all of their 38 outlets. In 2014 he started his companies LUXURIA and D'SIGN INTERIOR (in Fujairah) from his 14 years of experience in marketing. <strong>LUXURIA</strong> now holds five outlets in UAE and is expanding its wings. </div>
-                    <div>His wife Bushara Faisal is a housewife and he is a doting father of three children</div>
-                    <br>
-                    <div>As a successful entrepreneur he believes that an entrepreneur shoud start a field that he/she is confident and comfortable in after having a proper study in their field of interest</div>
+                    <div class="clearfix">
+                        <div>The man who hails from a small town called Wandoor of Malappuram District, Kerala is now a promising businessman in UAE. He comes from a middle class family, his father is a farmer as well as small scale businessman. Mr.Faisal's interest in marketing started from a tender age helping his father in their retail shop and learning the art of marketing by doing part time jobs along with his studies. He holds a degree in Bachelor of Commerce from MES College Mampand and studied International Business Management from Christ University, Bangalore</div>
+                        <div>He is the founder and Managing Director of <strong>LUXURIA</strong> and <strong>D'SIGN INTERIOR</strong> as well as the Managing Partner of <strong>Amigos Exhibitions LLC</strong>. Prior to founding his own companies he worked as an accountant in a Bangalore based company and later joined Bridgeway Group of Companies, Dubai as a counter sales manager. He founded Time House retails concept for Bridgeway Group. He was the Business Developing Manager as well as interior designer for all of their 38 outlets. In 2014 he started his companies LUXURIA and D'SIGN INTERIOR (in Fujairah) from his 14 years of experience in marketing. <strong>LUXURIA</strong> now holds five outlets in UAE and is expanding its wings. His wife Bushara Faisal is a housewife and he is a doting father of three children.</div>
+                        <div>As a successful entrepreneur he believes that an entrepreneur shoud start a field that he/she is confident and comfortable in after having a proper study in their field of interest</div>
+                    </div>
             </div>
         </div>
     </div>
