--- a/partials/gallery.html
+++ b/partials/gallery.html
@@ -1,4 +1,4 @@
-<section id="gallery" class="par-padding">
+<section id="gallery" class="sec-padding">
     <div class="container">
         <div class="row">
             <h3 class="section-title-5 michroma uppercase less-mar2 text-center">PHOTO GALLERY</h3>
