--- a/partials/home.html
+++ b/partials/home.html
@@ -9,7 +9,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-sm-12 col-xs-12 bmargin">
-                <h3 class="less-mar2">Mr. Faisal Neelambra</h3>
+                <h3 class="less-mar2">Faisal Neelambra</h3>
                 <div class="col-md-12 text-left nopadding"><img src="" alt=""></div>
                 <div class="clearfix"></div>
                 <br>
@@ -18,7 +18,7 @@
                     <strong>D'SIGN INTERIORS</strong> and <strong>Amigos Exhibhitions LLC.</strong></p>
                 <br>
                 <ul class="personal-info">
-                    <li> <i class="fa fa-calendar"></i> Birthdate : 05/05/1982</li>
+                    <li> <i class="fa fa-calendar"></i> Birthdate : May 5th</li>
                     <li> <i class="fa fa-phone"></i> Phone : +971 50 3476 100 </li>
                     <li> <i class="fa fa-envelope"></i> Email : faisal@neelambra.com</li>
                     <li> <i class="fa fa-globe"></i> Website : faisalneelambra.com</li>
