--- a/partials/employment.html
+++ b/partials/employment.html
@@ -66,7 +66,7 @@
                     <div class="icon-plain-msmall right text-orange-4"><i class="fa fa-address-card text-yellow-4"></i></div>
                     <div class="text-box-left less-padding-1">
                         <h5 class="uppercase less-mar2">Trainer</h5>
-                        <p><span class="text-orange-4">2000 - 2003</span> - Pain and palliative care malappuram</p>
+                        <p><span class="text-orange-4">2000 - Present</span> - Pain and Palliative Care, Malappuram</p>
                         <p><span>Nilambur</span></p>
                         <!--<p class="paddtop1">Lorem ipsum dolor sit amet consectetuer adipiscing elit Sus Aliquam ornare hendrerit augue. </p>-->
                     </div>
